--- a/index.html
+++ b/index.html
@@ -464,8 +464,8 @@
         var speakerHint = document.getElementById('speakerHint'); 
         var isPlaying = false;
 
-        const textPart1 = "Chúc em 1 năm mới 2026 sức khỏe - bình an - may mắn - mọi điều đều được như ý - mọi dự định kế hoạch đều được suôn sẻ, thuận lợi! Anh xin lỗi em nhiều !!!";
-        const textPart2 = "2026 - Thành công rực rỡ";
+        const textPart1 = "Chúc em một năm mới 2026 sức khỏe - hạnh phúc - bình an - may mắn - mọi điều đều được như ý - mọi dự định kế hoạch đều được được thực hiện suôn sẻ, thuận lợi!";
+        const textPart2 = "2026 - Mã đáo thành công";
         const textCaption = "Hãy luôn mạnh mẽ như 1 chú ngựa và tiến về phía trước nha";
 
         const typeSpeed = 75;  
@@ -654,3 +654,4 @@
     </script>
 </body>
 </html>
+
