--- a/index.html
+++ b/index.html
@@ -421,6 +421,7 @@
                 <div class="fortune-rank">Thượng Thượng Cát</div>
                 <div class="fortune-content">
                     <p><b>🌸 Sự Nghiệp:</b><br>Quý nhân phù trợ, suôn sẻ.</p>
+                    <p><b>❤️ Tình Duyên:</b><br>Viên mãn, hạnh phúc trọn vẹn.</p>
                     <p><b>💪 Sức Khỏe:</b><br>Dồi dào, dẻo dai, bình an.</p>
                     <p><b>💰 Tài Lộc:</b><br>Tiền vào như nước, sung túc.</p>
                 </div>
@@ -684,4 +685,5 @@
     </script>
 </body>
 </html>
+
 
