--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
         
         <img src="qr-viettel.jpg" alt="QR Code" class="qr-img-large" onclick="openLightbox('qr-viettel.jpg')">
         
-        <div class="qr-note">(Chạm vào mã QR để phóng to)</div>
+        <div class="qr-note">(Quét bằng APP ZaloPay nha<br>Chạm vào mã QR để phóng to)</div>
         <a href="qr-viettel.jpg" download="LiXi_Tet_2026.jpg" class="btn-download-bottom">
             <span>⬇️</span> Tải mã QR về
         </a>
@@ -685,5 +685,6 @@
     </script>
 </body>
 </html>
+
 
 
