--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
     <div id="envelope" onclick="openGift()">
         <div class="envelope-icon">🧧</div>
         <div class="year-text">Xuân Bính Ngọ<br>2026</div>
-        <div class="click-hint">Ấn vào đây <br> để nhận lộc đầu năm nha </div>
+        <div class="click-hint">E hãy ấn vào đây <br> để nhận lộc đầu năm nha </div>
     </div>
 
     <div id="content">
@@ -690,6 +690,7 @@
     </script>
 </body>
 </html>
+
 
 
 
